--- a/Book Finder/Book Finder.csproj
+++ b/Book Finder/Book Finder.csproj
@@ -111,6 +111,9 @@
     <PackageReference Include="MaterialDesignThemes">
       <Version>4.5.0</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>13.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Image\open-book.ico" />
