--- a/Book Finder/Book Finder.csproj
+++ b/Book Finder/Book Finder.csproj
@@ -114,6 +114,7 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <Resource Include="Font\Comfortaa.ttf" />
+    <None Include="Jsons\Feedback.json" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
